css/jjweb.css
html{
	height:100%;
	width:100%;
}

img{
	height:auto;
	max-width:500px;
	min-width:50px;
	width:100%;
}
button{
	cursor:pointer;
	outline:none !important;
}
button:hover{
	color:#F8E9A1 !important;
}
body{
	margin:0;
	background-color:#A8D0E6;
	height:100%;
	width:100%;
}
header{
	padding:0vh 0vh 0vh 0vh;
}
footer{
	padding: 3vh;	
	text-align:center;
	background-color:#374785 !important;
	/*background-color:#ffbd80 !important;*/
}
#header{
	width:100% !important;
}

#copyright{
	font-size: 2vh;
	/*color:#A8A8A8;*/
	color:white;
	padding:4vh 4vh;
	margin:0;
}
#banner_wrap{
	text-align:center;
}
#name_banner{
	text-align:center;
	display:inline;
	padding:0 0.5% 0 0;
}
#software_engineer{
	text-align:center;
	display:inline;
	padding:0 0 0 0.5%;
}
#menu{
	text-align:center;
}
ul#menu_list li{
	display:inline;
}
#menu_list{
	list-style:none;
	padding-left:0;
}
#about_btn{

}
#title{
	padding: 8% 8% 0% 8%;
}

.main{
    height: 100%;
    width: 100%;
    text-align: center;
}
.project_details{
	display:none;
	min-height:100%;
	width:100%;
	background-color:#f76c6c;
}

.about_details{
	display:none;
	height:100%;
	width:100%;
	background-color:#151c37;
}

.mainDiv{

    height: 100%;
    width: 100%;
    align-items: center;
    display: flex;
    text-align: center;
    vertical-align:bottom;
}

.project{
	display:none;
	text-align:center;
}

.project_list_header{	
	color:#f8e9a1!important;
	font-family:"Garamond";
	font-size: 6vw !important;
}

.about_header{
	color:#f76c6c !important;
	font-family:"Garamond";
	font-size: 6vw !important;
}

.about{
	display:none;
	text-align:center;
	width:100%;
	height:70%;
}

.about_section{
	text-align:center;
	min-width:100%;
	min-height:100%;
    align-items: center;
    display: flex;
    vertical-align:bottom;
}

.project_section{
	text-align:center;
	min-width:100%;
	min-height:100%;
}

.footer-company-name{
	color:#ff881a !important;
	color:#25304E!important;
	font-family:"Century Gothic";
}

.footer-links{
	color:#F8E9A1 !important;
	font-family:"Century Gothic";
}

.table{
	display:inline-table;
	padding: 2%;
	width: 80%;
	max-width:100%;
	height:auto;
}

.fade_in{
	display:none;
}

.content_link{
	color:#ffffff;
}

.content_link:hover{	
	color:#f8e9a1 !important;
	text-decoration:none !important;
}

.btn{
	background-color:transparent;
	border-radius:8px;
	border: none;
	font-size: 3vw;
	padding:1%;
	font-family: "Century Gothic" ;
}

.my_blurb{
	text-align:left;
	font-family:"Century Gothic";
	/*background-color:#ffffff;*/
	height: 80%;
	width:60%;
	margin:0 auto;
	border-color:green;
	align-items:center;
}

.home_btn{
	position:absolute;
    margin-top: 1%;
    margin-right: 1%;
    padding: 5px;
    right:0;
    background-color: white;
    border: none;
    color: #F76C6C;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    font-family:"Century Gothic";
    border-radius: 6px;
}

.blurb_text{
	margin:3%;
	color:#ffffff;
}

.closing
{
	height:10%;
	width:100%;
	text-align:center;
	font-family:"Century Gothic";
	font-size:16px;
	color:#ffffff;
	padding:3vh 0 2vh 0;
}

.btn-info:focus{
	background: none !important;
}
.btn-info:hover{
	background: none !important;
}
.btn-info{
	background: none !important;
	-o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition:.5s;
}

.btn-info:hover{
	background-color:#f8e9a1 !important;
}

.modal-blurb{
	text-align:left;
}

.modal-open{
	padding-right: 0 !important
}

.modal-img{
	width: 25%;
	height: 25%;
}

@media (max-width:450px) {
  header{
  	padding:10vh 0 10vh 0vh;
  }
}

@media (max-width:600px) {
  .btn{
    font-size:20px; 
  }
  .project_list_header{
  	font-size:24px;
  }
}

@media (min-width:1400px) {
  .btn{
    font-size:30px; 
  }
}
@media(max-width:1211px){
	#name_banner{
		text-align:center;
		display:block;
	}
	#software_engineer{
		text-align:center;
		display:block;
	}
	#banner_wrap{
		text-align:center;
	}
}


.footer-basic-centered{
	background-color: #292c2f;
	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
	box-sizing: border-box;
	width: 100%;
	text-align: center;
	font: normal 18px sans-serif;

	padding: 45px;
	/*margin-top: 80px;*/
}

.footer-basic-centered .footer-company-motto{
	color:  #8d9093;
	font-size: 24px;
	margin: 0;
}

.footer-basic-centered .footer-company-name{
	color:  #8f9296;
	font-size: 14px;
	margin: 0;
}

.footer-basic-centered .footer-links{
	list-style: none;
	font-weight: bold;
	color:  #ffffff;
	padding: 35px 0 23px;
	margin: 0;
}

.footer-basic-centered .footer-links a{
	display:inline-block;
	text-decoration: none;
	color: inherit;
}

/* If you don't want the footer to be responsive, remove these media queries */

@media (max-width: 600px) {

	.footer-basic-centered{
		padding: 35px;
	}

	.footer-basic-centered .footer-company-motto{
		font-size: 18px;
	}

	.footer-basic-centered .footer-company-name{
		font-size: 12px;
	}

	.footer-basic-centered .footer-links{
		font-size: 14px;
		padding: 25px 0 20px;
	}

	.footer-basic-centered .footer-links a{
		line-height: 1.8;
	}
}

